Log viewer: fix wrap

--- a/src/css/log.viewer.scss
+++ b/src/css/log.viewer.scss
@@ -464,7 +464,7 @@ pre.viewer {
 .html-viewer .line, 
 .text-viewer .line,
 .line {
-    display: block !important;
+    /*display: block !important;*/
     position: relative;
 }
 
